Small fix updates, nav spacing and texts

--- a/assets/base.css
+++ b/assets/base.css
@@ -2221,14 +2221,14 @@ details[open] > .share-button__fallback {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 8px 20px;
+  padding: 8px 16px;
   
   position: relative;
 }
 
 @media screen and (min-width: 990px) {
   .header {
-    padding: 0 20px;
+    padding: 0 40px;
   }
 }
 
@@ -2280,7 +2280,7 @@ details[open] > .share-button__fallback {
 
 @media screen and (min-width: 990px) {
   .header__heading-link {
-    margin-left: -0.75rem;
+    
   }
 
 
